--- a/Sites/Dashboard_new/public/login.html
+++ b/Sites/Dashboard_new/public/login.html
@@ -24,7 +24,9 @@
 
                 <button type="submit" class="right__button">Entrar</button> <br> <br>
                 <span id="form_login__span-error"></span>
+                <img id="loading" src="./img/gifLoading.gif" style="display: none; margin: 0 auto;" alt="">
             </form>
+
         </div>
     </div>
 </body>
@@ -34,6 +36,7 @@
 <script>
 
     function entrar() {
+        loading.style.display = 'block';
         var formulario = new URLSearchParams(new FormData(form_login));
         fetch("/tecnico/autenticar", {
             method: "POST",
@@ -41,15 +44,17 @@
         }).then(response => {
             if (response.ok) {
                 response.json().then(json => {
-                    console.log(json)
+                    loading.style.display = 'none';
                     sessionStorage.login_usuario_meuapp = json.emailTec;
                     sessionStorage.nome_usuario_meuapp = json.nomeTecnico;
                     sessionStorage.nome_escola_meuapp = json.nomeEscola;
                     sessionStorage.fkEscola = json.fkEscola;
                     window.location.href = 'index.html';
+
                 });
 
             } else {
+                loading.style.display = 'none';
                 response.text().then(texto => {
                     document.getElementById('form_login__span-error').innerHTML = texto;
                     document.getElementById('form_login__span-error').style.color = 'red';
