--- a/Sites/site_institucional/sobre.html
+++ b/Sites/site_institucional/sobre.html
@@ -5,17 +5,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/sobre.css" />
-    <link rel="stylesheet" href="css/menu.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon" />
     <title>Sobre</title>
   </head>
 
   <body>
     <div class="fbody">
-      <div class="menu">
+      <div class="top_bar_menu_responsive">
+        <div>
+          <img class="logo" src="Logos/Logo-MIND6.png" alt="">
+        </div>
+        <div class="div_icon_btn_menu">
+          <img onclick="showMenu()" class=" icon_btn_menu" src="./img/icone_menu.jpg">
+        </div>
+
+
+      </div>
+      <div class="menu" id="main_menu">
         <div id="bkGroundMenu" class="bgMenu"></div>
+        <button class="btn_close_menu" onclick="hideMenu()">X</button>
         <ul>
           <img class="logo" src="Logos/Logo-MIND6.png" alt="">
           <li class="hover"><a href="index.html">Home</a></li>
@@ -25,6 +36,7 @@
           <li class="hover"><a href="../Dashboard/login.html">login</a></li>
         </ul>
       </div>
+
       <div class="laboratorio">
         <div class="cor">
           <div class="read">
@@ -98,23 +110,23 @@
         </div>
 
         <div class="card g-2">
-          <img id="vicariAjuste" src="Equipe/Guilherme-Vicari.jpeg" alt="" />
+          <img src="Equipe/Guilherme-Vicari.jpeg" />
           <h1>Guilherme Vicari</h1>
-          <p>Position: Developer and Analyst</p>
+          <p>Position: Developer and Designer</p>
 
-          <a href="https://www.instagram.com/vicarizaum/?hl=pt-br"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/guilherme-vicari-0356341aa/"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://github.com/guilhermeVicari"><i class="fab fa-github"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+          <a href=""><i class="fab fa-linkedin-in"></i></a>
+          <a href=""><i class="fab fa-github"></i></a>
         </div>
 
         <div class="card g-2">
-          <img id="cesarAjuste" src="Equipe/Cesar-Augusto.jpeg" alt="" />
+          <img src="Equipe/Cesar-Augusto.jpeg" />
           <h1>César Augusto</h1>
-          <p>Position: Developer and Analyst</p>
+          <p>Position: Developer and Designer</p>
 
-          <!-- <a href=""><i class="fab fa-instagram"></i></a> -->
-          <a href="https://www.linkedin.com/in/cesar-augusto-b55b7b1a5/"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://github.com/cesar-augusto-alves-barbosa"><i class="fab fa-github"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+          <a href=""><i class="fab fa-linkedin-in"></i></a>
+          <a href=""><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -144,8 +156,8 @@
       </div>
 
       <div class="card">
-        <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_yPKMfX.json" class="lott" background="transparent"
-          speed="0.8" style="" loop autoplay></lottie-player>
+        <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_yPKMfX.json" class="lott"
+          background="transparent" speed="0.8" style="" loop autoplay></lottie-player>
         <div class="read">
           <h1>VALORES</h1>
           <p>
