Responsividade da página home finalizada

--- a/Sites/site_institucional/index.html
+++ b/Sites/site_institucional/index.html
@@ -91,7 +91,7 @@
         <div id="controltec">
             <div class="cardcontroltec">
                 <div class="controltec-g1">
-                    <img src="Logos/Logo-DotControlTec.png" alt="">
+                    <img src="Logos/Logo-DotControlTec.png" class="lgo-controltec" alt="">
                 </div>
                 <div class="controltec-g1">
                     <p>O cubo da nossa logo .CONTROLTEC simboliza o caráter sólido, a estabilidade, sabedoria,
