--- a/Sites/site_institucional/sobre.html
+++ b/Sites/site_institucional/sobre.html
@@ -74,7 +74,7 @@
         <div class="card g-1">
           <img src="Equipe/Lucas-Felipe.jpeg" alt="" />
           <h1>Lucas Felipe</h1>
-          <p>Position: Scrum Master</p>
+          <p>Position:<br> Scrum Master</p>
 
           <a href="https://www.instagram.com/eae.felpx/?hl=pt-br"><i class="fab fa-instagram"></i></a>
           <a href="https://github.com/LucasFelpx"><i class="fab fa-github"></i></a>
@@ -83,7 +83,7 @@
         <div class="card g-1">
           <img src="Equipe/Gustavo-Yudi.jpeg" alt="" />
           <h1>Gustavo Yudi</h1>
-          <p>Position: Product Owner (PO)</p>
+          <p>Position:<br> Product Owner (PO)</p>
 
           <a href="https://www.instagram.com/_donyudi/?hl=pt-br"><i class="fab fa-instagram"></i></a>
           <a href="https://github.com/gustavoyudi"><i class="fab fa-github"></i></a>
