Iniciando tela de cadastro de técnico no banco

--- a/Sites/Dashboard_new/public/profile.html
+++ b/Sites/Dashboard_new/public/profile.html
@@ -30,12 +30,12 @@
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
             <li><a href="">Blacklist</a></li>
-            <li><a href="">Administrador</a></li>
+            <li><a href="./administrador.html">Administrador</a></li>
         </ul>
-        <a href="profile.html"><i  id="header__profile" class="fas fa-user-circle"></i></a>
+        <a href="profile.html"><i id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
 
-   
+
 
     <div class="showcase">
         <div class="container">
@@ -58,15 +58,18 @@
             <div class="container__div-configuracao">
                 <div id="div-configuracao__div-modoNoturno" class="div-configuracao__div">
                     <i class="fas fa-moon"></i>
-                    <span class="div-configuracao__spn" id="div-configuracao__spn-modoNoturno">Ativar Modo Noturno</span>
+                    <span class="div-configuracao__spn" id="div-configuracao__spn-modoNoturno">Ativar Modo
+                        Noturno</span>
                 </div>
 
                 <div id="div-configuracao__div-trocarSenha" class=" div-configuracao__div">
                     <i class="fas fa-lock"></i>
-                    <span class="div-configuracao__spn" id="div-configuracao__spn-trocarSenha">Solicitar Troca de Senha</span>
+                    <span class="div-configuracao__spn" id="div-configuracao__spn-trocarSenha">Solicitar Troca de
+                        Senha</span>
                 </div>
 
-                <div onclick="finalizar_sessao('login.html')" id="div_configuracao__div-desconectar" class="div-configuracao__div">
+                <div onclick="finalizar_sessao('login.html')" id="div_configuracao__div-desconectar"
+                    class="div-configuracao__div">
                     <i class="fas fa-power-off"></i>
                     <span class="div-configuracao__spn" id="div-configuracao__spn-desconectar">Desconectar</span>
                 </div>
