--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -41,7 +41,7 @@
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
             <li><a href="">Blacklist</a></li>
-            <li><a href="">Administrador</a></li>
+            <li><a href="../administrador.html">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
