--- a/Sites/Dashboard_new/public/index.html
+++ b/Sites/Dashboard_new/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
-   
+
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
     <title>Visão Global</title>
 </head>
@@ -31,7 +31,7 @@
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
             <li><a href="">Blacklist</a></li>
-            <li><a href="">Administrador</a></li>
+            <li><a href="./administrador.html">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
