--- a/Sites/Dashboard_new/public/login.html
+++ b/Sites/Dashboard_new/public/login.html
@@ -24,7 +24,7 @@
 
                 <button type="submit" class="right__button">Entrar</button> <br> <br>
                 <span id="form_login__span-error"></span>
-                <img id="loading" src="./img/gifLoading.gif" style="display: none; margin: 0 auto;" alt="">
+                <img id="loading" src="./img/gifLoading.gif" style="display: none; margin: 0 auto;">
             </form>
 
         </div>
@@ -48,6 +48,7 @@
                     sessionStorage.login_usuario_meuapp = json.emailTec;
                     sessionStorage.nome_usuario_meuapp = json.nomeTecnico;
                     sessionStorage.nome_escola_meuapp = json.nomeEscola;
+                    sessionStorage.id_usuario_meuapp = json.idTecnico;
                     sessionStorage.fkEscola = json.fkEscola;
                     window.location.href = 'index.html';
 
