Responsividade da página .CONTROLTEC finalizada

--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -59,7 +59,7 @@
         <section id="controltecVantagens">
             <h1>VANTAGENS DE UTILIZAR A .CONTROLTEC</h1>
             <div class="cardsv">
-                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_1t6khjj0.json"
+                <lottie-player  class="time" src="https://assets10.lottiefiles.com/packages/lf20_1t6khjj0.json"
                     background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
                 </lottie-player>
                 <div class="cardv">
@@ -91,7 +91,7 @@
             </div>
 
             <div class="cardsv">
-                <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_31ucdsl4.json"
+                <lottie-player class="time" src="https://assets6.lottiefiles.com/packages/lf20_31ucdsl4.json"
                     background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
                 </lottie-player>
                 <div class="cardv">
