--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -16,8 +16,19 @@
 
     <body>
         <div class="fbody">
-            <div class="menu">
+            <div class="top_bar_menu_responsive">
+                <div>
+                    <img class="logo" src="Logos/Logo-MIND6.png" alt="">
+                </div>
+                <div class="div_icon_btn_menu">
+                    <img onclick="showMenu()" class=" icon_btn_menu" src="./img/icone_menu.jpg">
+                </div>
+
+
+            </div>
+            <div class="menu" id="main_menu">
                 <div id="bkGroundMenu" class="bgMenu"></div>
+                <button class="btn_close_menu" onclick="hideMenu()">X</button>
                 <ul>
                     <img class="logo" src="Logos/Logo-MIND6.png" alt="">
                     <li class="hover"><a href="index.html">Home</a></li>
@@ -25,14 +36,17 @@
                     <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
                     <li class="hover"><a href="contato.html">Contato</a></li>
                     <li class="hover"><a href="../Dashboard/login.html">login</a></li>
-                </ul>
-            </div>
-        </div>
-        </div>
 
-        <div class="infoProject">
-            <div class="project1">
-                <h1>.CONTROLTEC, A MAIS NOVA SOLUÇÃO DIGITAL</h1>
+
+                </ul>
+
+            </div>
+
+
+            <div class="infoProject">
+                <div class="project1">
+                    <h1>.CONTROLTEC, A MAIS NOVA SOLUÇÃO DIGITAL</h1>
+                </div>
             </div>
         </div>
 
@@ -59,7 +73,7 @@
         <section id="controltecVantagens">
             <h1>VANTAGENS DE UTILIZAR A .CONTROLTEC</h1>
             <div class="cardsv">
-                <lottie-player  class="time" src="https://assets10.lottiefiles.com/packages/lf20_1t6khjj0.json"
+                <lottie-player class="time" src="https://assets10.lottiefiles.com/packages/lf20_1t6khjj0.json"
                     background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
                 </lottie-player>
                 <div class="cardv">
