--- a/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
@@ -77,6 +77,17 @@
 
             <div id="container-esquerda__div-tecnicosAtivo" class="container-esquerda__div-configuracao">
                 <span><b>Técnicos Online/Offline</b></span>
+                <table class="tabela_tecnicos">
+                    <thead>
+                        <th>Nome</th>
+                        <th>Email</th>
+                        <th>Telefone</th>
+                        <th>Disponibilidade</th>
+                    </thead>
+                    <tbody id="tecnicos_on_off">
+
+                    </tbody>
+                </table>
             </div>
 
         </div>
@@ -153,5 +164,39 @@
 
         });
     }
+    function getTecnicos() {
+        fetch(`/tecnico/recuperar/${sessionStorage.fkEscola}`, {
+            method: 'GET'
+        }).then(result => {
+            if (result.ok) {
+
+                result.json().then(json => {
+
+                    for (let i = 0; i < json.length; i++) {
+                        let disponibilidadeTecnico;
+                        if (json[i].disponibilidade == true) {
+                            disponibilidadeTecnico = '<i style="color: green; font-size: 20px" class="far fa-check-circle"></i>';
+                        } else {
+                            disponibilidadeTecnico = '<i style="color: red; font-size: 20px" class="far fa-times-circle"></i>';
+                        }
+                        tecnicos_on_off.innerHTML += `
+                            <tr>
+                                <td>${json[i].nomeTecnico}</td>
+                                <td>${json[i].emailTec}</td>
+                                <td>${json[i].telefoneTec}</td>
+                                <td>${disponibilidadeTecnico}</td>
+                            </tr>
+                        `;
+                    }
+                })
+            } else {
+                result.text().then(texto => {
+                    alert(texto);
+                    console.error(texto);
+                })
+            }
+        });
+    }
+    getTecnicos();
     addAlerts();
 </script>
