Adicionando sistema de verificação de tecnicos gestores

--- a/Sites/Dashboard_new/public/Inventario/appInstalados.html
+++ b/Sites/Dashboard_new/public/Inventario/appInstalados.html
@@ -30,7 +30,7 @@
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
             <li><a href="">Blacklist</a></li>
-            <li><a href="">Administrador</a></li>
+            <li id="link_gestor"><a href="">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
