--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -43,7 +43,7 @@
             <li><a href="">Blacklist</a></li>
             <li><a id="link_gestor" href="../administrador.html">Administrador</a></li>
         </ul>
-        <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
+        <a href="#"><i onclick="setModal()" id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
 
 
@@ -168,7 +168,7 @@
 </html>
 <script src="../js/function.js"></script>
 <script src="https://bernii.github.io/gauge.js/dist/gauge.min.js"></script>
-<script src="../js/charts.js"></script>
+<script src="../js/chartsVisaoMaquina.js"></script>
 <script>
     let disposicao_maq;
 
