--- a/Sites/Dashboard_new/public/Inventario/appInstalados.html
+++ b/Sites/Dashboard_new/public/Inventario/appInstalados.html
@@ -32,7 +32,7 @@
             <li><a href="">Blacklist</a></li>
             <li id="link_gestor"><a href="">Administrador</a></li>
         </ul>
-        <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
+        <a href="#"><i onclick="setModal()" id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
 
 
