Pagina global de maquinas finalizada

--- a/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
@@ -96,17 +96,19 @@
         </div>
 
         <div class="container-direita">
-            <span><b>Média de uso da CPU</b></span>
+           
             <div id="container-direita__div-usoRede" class="container-direita__div-configuracao">
                 <canvas id="grafico_media_cpu_computadores" style="width: 100%; height: 100%;"></canvas>
             </div>
 
-            <span><b>Status das máquinas</b></span>
+           
             <div id="container-direita__div-mediaUsoCpu" class="container-direita__div-configuracao">
+                <span><b>Status das máquinas</b></span>
                 <table class="tabela_status_maquinas">
                     <thead>
                         <th>Nome</th>
                         <th>Disponibilidade</th>
+                        <th>Status</th>
                     </thead>
                     <tbody id="status_maquinas">
 
