Graficos tela de maquinas finalizado

--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -143,16 +143,16 @@
 
                 <div class="container-graficos-trabalhados">
                     <div style="width: 100%; height: 150px; margin-left: 10px;">
-                        <span>Média de uso da CPU</span>
+                      
                         <div id="container-graficos__div-mediaCpu" class="container-graficos__div-configuracao">
-                            <canvas id="grafico_media_cpu"></canvas>
+                            <canvas id="grafico_comparacao_cpu_computadores"></canvas>
                         </div>
                     </div>
 
                     <div style="width: 100%; height: 150px; margin-right: 10px;">
-                        <span style="margin-left: 30px;">Nível de Temperatura de CPU</span>
+                       
                         <div id="container-graficos__div-tempCpu" class="container-graficos__div-configuracao">
-
+                            <canvas id="grafico_comparacao_ram_computadores"></canvas>
                         </div>
                     </div>
 
