Linkando tela de login

--- a/Sites/site_institucional/public/controlTec.html
+++ b/Sites/site_institucional/public/controlTec.html
@@ -35,7 +35,7 @@
                     <li class="hover"><a href="sobre.html">Sobre nós</a></li>
                     <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
                     <li class="hover"><a href="contato.html">Contato</a></li>
-                    <li class="hover"><a href="../Dashboard/login.html">login</a></li>
+                    <li class="hover"><a href="https://mind6.azurewebsites.net/login.html">login</a></li>
 
 
                 </ul>
