--- a/Sites/Dashboard_new/public/administrador.html
+++ b/Sites/Dashboard_new/public/administrador.html
@@ -29,7 +29,7 @@
             </li>
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
-            <li><a href="">Blacklist</a></li>
+            <li><a href="./blacklist.html">Blacklist</a></li>
             <li id="link_gestor"><a href="">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="setModal()" id="header__profile" class="fas fa-user-circle"></i></a>
@@ -68,10 +68,6 @@
                 <button onclick="return cadastrarTecnico()"
                     class="container-tecnico__formularios__btn_adicionar">Adicionar</button>
                 <div id="resposta_cadastro"></div>
-            </form>
-            <hr class="container-tecnico__divisoria">
-            <form class="container-tecnico__formulario_remover container-tecnico__formularios" action="">
-                <label for="">REMOVER USUÁRIO</label>
             </form>
         </div>
 
