--- a/Sites/Dashboard_new/public/index.html
+++ b/Sites/Dashboard_new/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/header.css">
 
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
-    <title>Visão Global</title>
+    <title>Home - Mind 6</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             </li>
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
-            <li><a href="">Blacklist</a></li>
+            <li><a href="./blacklist.html">Blacklist</a></li>
             <li id="link_gestor"><a href="./administrador.html">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="setModal()" id="header__profile" class="fas fa-user-circle"></i></a>
