--- a/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
@@ -32,7 +32,7 @@
             </li>
             <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
             <li><a href="">Relatórios</a></li>
-            <li><a href="">Blacklist</a></li>
+            <li><a href="../blacklist.html">Blacklist</a></li>
             <li id="link_gestor"><a href="../administrador.html">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="setModal()" id="header__profile" class="fas fa-user-circle"></i></a>
@@ -96,12 +96,12 @@
         </div>
 
         <div class="container-direita">
-           
+
             <div id="container-direita__div-usoRede" class="container-direita__div-configuracao">
                 <canvas id="grafico_media_cpu_computadores" style="width: 100%; height: 100%;"></canvas>
             </div>
 
-           
+
             <div id="container-direita__div-mediaUsoCpu" class="container-direita__div-configuracao">
                 <span><b>Status das máquinas</b></span>
                 <table class="tabela_status_maquinas">
