--- a/Sites/Dashboard_new/public/blacklist.html
+++ b/Sites/Dashboard_new/public/blacklist.html
@@ -72,7 +72,7 @@
             <div class="div_tabela_blacklist">
                 <table class="tabela_blacklist">
                     <thead>
-                        <th>Nome do Processo</th>
+                        <th>Nome Processo(s)</th>
                     </thead>
                     <tbody id="tabela_processos_blacklist">
 
@@ -121,7 +121,7 @@
         }).then(response => {
             if (response.ok) {
                 response.json().then(json => {
-                    let processo = nomeProcesso.value;
+                    let processo = nomeProcesso.value.trim();
                     let processoExistente = false;
                     for (let i = 0; i < json.length; i++) {
                         console.log(json[i].nomeProcesso)
@@ -162,7 +162,12 @@
             method: "POST",
         }).then(response => {
             if (response.ok) {
-                processoExistenteEscola = true;
+                response.json().then(json => {
+                    if (json.length > 0) {
+                        processoExistenteEscola = true;
+                    }
+                });
+
             } else {
                 console.error('Nenhum dado encontrado ou erro na API');
             }
@@ -173,6 +178,7 @@
         fetch(`/blacklist/recuperar_idBlackList/${processo}`, {
             method: "GET",
         }).then(response => {
+            debugger;
             if (response.ok) {
                 response.json().then(json => {
                     validaEscolaBlackList(json[0].idBlacklist);
@@ -183,7 +189,7 @@
                             console.log("PROCESSO JÁ EXISTENTE");
                         }
                         clearInterval(intervaloVerificacao);
-                    }, 4000)
+                    }, 1000)
 
                 });
 
